...
                    android:layout_height="match_parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="1dp">-->
        <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewCourses"
                android:layout_height="match_parent"
                android:layout_width="match_parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_margin="0dp">
...
                android:layout_height="50dp" android:id="@+id/my_courses_btn" android:layout_weight="1"
                android:background="@color/selectedBtn" android:textColor="@color/colorSelectedButton"
                android:onClick="myCoursesClick"/>
        <Button
                android:text="Dostępne kursy"
                android:layout_width="0dp"
                android:layout_height="50dp" android:id="@+id/available_courses_btn" android:layout_weight="1"
                android:background="@color/selectedBtn" android:textColor="@color/colorSelectedButton"
                android:onClick="availableCoursesClick"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
