...
            android:fontFamily="sans-serif-medium" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/loginTxt"/>
    <Button
            android:text="Zaloguj"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:id="@+id/loginBtn"
            android:onClick="loginFun"
            app:layout_constraintTop_toBottomOf="@+id/passwordTxt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:background="@color/colorButton"
            android:textColor="@color/colorSelectedButton" android:layout_marginTop="16dp"
            android:layout_marginStart="32dp" android:layout_marginEnd="32dp"/>
...
