...
                app:layout_constraintHorizontal_bias="0.459" android:layout_marginBottom="8dp" android:textSize="16sp"/>
        <Button
                android:text="Kursy"
                android:textColor="#FFFFFF"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/quizzesBtn"
                android:background="@color/colorButton"
                android:onClick="changeActivityCourses" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/flashcardsBtn" android:textSize="16sp"/>
...
